eks/eks/alb/test_dev/test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flask
  name: flaskproject
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: flaskproject
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaskproject
    spec:
      containers:
      - image: 707677861059.dkr.ecr.ap-northeast-2.amazonaws.com/nadeuri:7850486c449dbcf33c67b8a7755488421c42c7c5
        imagePullPolicy: Always
        name: flaskproject
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: flask
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: flaskproject
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flask
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 80
